envoy.gw.yaml

static_resources:
  listeners:
  - address:
      socket_address:
        address: 127.0.0.1
        port_value: 9001
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: todo_grpc_gateway
          route_config:
            name: todo_grpc
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/mindflash.todo.Todos/"
                route:
                  cluster: todo_grpc
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: todo_grpc
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: todo-grpc
        port_value: 8000

admin:
  access_log_path: "/var/log/envoy/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
